Import of TSTANLEY/Games-QuizTaker-1.01 from CPAN.
gitpan-cpan-distribution: Games-QuizTaker
gitpan-cpan-version:      1.01
gitpan-cpan-path:         TSTANLEY/Games-QuizTaker-1.01.tar.gz
gitpan-cpan-author:       TSTANLEY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -4,3 +4,6 @@ Revision history for Perl extension Games::QuizTaker.
 	- original version; created by h2xs 1.20 with options
 		-AXn Games::QuizTaker
 
+1.01  Sat Oct 20 19:27:50 2001
+	- Added the README file
+
