--- a/README
+++ b/README
@@ -10,10 +10,9 @@ Install this just like any other Perl module
 Question Files
 ==============
 
-	There are two files called sampleqa and sample.csv that are
-	provided with this module to provide for an example of how to
-	write your own. The sampleqa file uses the pipe ( "|" ) character
-	as a delimitor, and the sample.csv file is a comma separated values
-	file.
-
+There are two files called sampleqa and sample.csv
+that are provided with this module to provide an
+example of how to write your own. The sampleqa file
+uses the pipe ( "|" ) character as a delimitor, and
+the sample.csv file is a comma separated values file.
 
