Import of TSTANLEY/Games-QuizTaker-1.09 from CPAN.
gitpan-cpan-distribution: Games-QuizTaker
gitpan-cpan-version:      1.09
gitpan-cpan-path:         TSTANLEY/Games-QuizTaker-1.09.tar.gz
gitpan-cpan-author:       TSTANLEY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -57,3 +57,8 @@ Revision history for Perl extension Games::QuizTaker.
 	  this module
 
 
+1.09  Sat Jun  8 23:16:09 2002
+	- Modified the AUTOLOAD subroutine
+
+	- Cleaned up some syntax in the test sub-routine
+
