Import of TSTANLEY/Games-QuizTaker-1.091 from CPAN.
gitpan-cpan-distribution: Games-QuizTaker
gitpan-cpan-version:      1.091
gitpan-cpan-path:         TSTANLEY/Games-QuizTaker-1.091.tar.gz
gitpan-cpan-author:       TSTANLEY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -62,3 +62,6 @@ Revision history for Perl extension Games::QuizTaker.
 
 	- Cleaned up some syntax in the test sub-routine
 
+1.091 Thu Jun 20 14:19:01 2002
+	- Corrected a typo in the POD
+
