--- a/Changes
+++ b/Changes
@@ -70,4 +70,11 @@ Revision history for Perl extension Games::QuizTaker.
 
 	- Optimized an if..elsif..else statement within the generate function
 
+1.12  Tue Nov 12 18:00:50 2002
+	- Removed some unnecessary variables and modified the calls to
+          the generate and test functions
+
+	- Made corresponding changes to the POD
+
+	- Made corresponding changes to HTML version of the POD
 
