--- a/Changes
+++ b/Changes
@@ -71,10 +71,13 @@ Revision history for Perl extension Games::QuizTaker.
 	- Optimized an if..elsif..else statement within the generate function
 
 1.12  Tue Nov 12 18:00:50 2002
-	- Removed some unnecessary variables and modified the calls to
-          the generate and test functions
+	- Removed some unnecessary variables and modified the calls to the generate
+	  and test functions.
 
 	- Made corresponding changes to the POD
 
 	- Made corresponding changes to HTML version of the POD
 
+1.20  Thu Nov 21 11:32:32 2002
+	- Renamed the internal get/set methods and made the calls to those methods more
+	  object oriented.
