--- a/Changes
+++ b/Changes
@@ -96,3 +96,9 @@ Revision history for Perl extension Games::QuizTaker.
 
 	- Made corresponding changes to the HTML version of the POD
 
+1.24  Wed Feb  5 10:22:16 2003
+	- Fixed a small problem with the Answer_Separator and
+	  Answer_Delimiter. Cleaned it up so that the load and
+	  test functions will properly split/substitute on whatever
+	  is passed as a delimiter.
+
